<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <PreferenceCategory
        app:title="@string/Setting">


    <SwitchPreferenceCompat
        app:icon="@drawable/ic_miscellaneous"
        app:key="@string/dark_mode_key"
        app:title="@string/enable_dark_mode"/>
        <ListPreference
            app:key="@string/enable_notification_key"
            app:icon="@drawable/ic_notification"
            app:title="@string/notification"
            app:entries="@array/notifications_key"
            app:entryValues="@array/notifications_value"
            />
    <ListPreference
        app:icon="@drawable/ic_translate"
        app:key="@string/language_key"
        app:title="@string/language_key"
        app:entries="@array/languages_key"
        app:entryValues="@array/languages"
        />
    </PreferenceCategory>
</PreferenceScreen>